# Multimodal-Recommendation-System

./: README.md  build_recommender.py  pyproject.toml  requirements.txt
notebooks/: exploration.ipynb
src/: app.py  build_recommender.py  recommender.py
src/data/: loader.py  preprocess.py
src/models/: fusion.py  image_encoder.py  text_encoder.py
src/types/: types.py
src/utils/: io.py  metrics.py
tests/: test_recommender.py  test_utils.py
